certs/hello-zero/service.yaml
apiVersion: v1
kind: Service 
metadata:
  name: hello-zero
  namespace: h-zero
spec: # politicas de acesso ao pod
  type: ClusterIP
  selector:
    app: hello-zero
  ports:
    - protocol:  TCP
      port: 80
      targetPort: "http"
