certs/hello-zero/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: hello-zero
  namespace: h-zero
  annotations:
    kubernetes.io/ingress.class: nginx
    acme.kubernetes.io/enable: "true"
    acme.kubernetes.io/dns: dns_gd
spec: 
  rules:
    - host: lustepe.xyz
      http: 
        paths: 
          - pathType: Prefix
            path: /
            backend: 
              serviceName: hello-zero
              servicePort: 80
